Get rootDir
Signed-off-by: Craig Perkins <craig5008@gmail.com>